--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
       env:
         SUPER_SECRET: ${{ secrets.SUPER_SECRET }}
       run: |
-        example-command "$SUPER_SECRET"
+         echo "$SUPER_SECRET" 
